stuff
added hopper support for custom inventory holders
expanded farmer functionality
fixed crafter and crafting factory
fixed trading machine