@@ -3,10 +3,10 @@ package me.gamma.cookies.object.tile.machine;
 
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -16,28 +16,33 @@ import java.util.function.Predicate;
 
 import org.bukkit.Chunk;
 import org.bukkit.Material;
-import org.bukkit.Particle;
+import org.bukkit.Tag;
 import org.bukkit.block.Block;
+import org.bukkit.block.BlockFace;
 import org.bukkit.block.data.Ageable;
 import org.bukkit.block.data.BlockData;
-import org.bukkit.block.data.Waterlogged;
 import org.bukkit.block.data.type.CaveVinesPlant;
 import org.bukkit.enchantments.Enchantment;
+import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 
-import me.gamma.cookies.object.Supplier;
 import me.gamma.cookies.object.block.machine.FarmerBlock;
 import me.gamma.cookies.object.block.machine.MachineUpgrade;
+import me.gamma.cookies.util.BlockUtils;
+import me.gamma.cookies.util.CollectionUtils;
 import me.gamma.cookies.util.ItemBuilder;
 import me.gamma.cookies.util.ItemUtils;
 import me.gamma.cookies.util.PersistentDataUtils;
 import me.gamma.cookies.util.collection.PersistentDataObject;
+import me.gamma.cookies.util.core.MinecraftWorldHelper;
 
 
 
 public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 
 	private static final Random random = new Random();
+
+	private static final int BONEMEAL_SLOT = 19;
 
 	private static final String KEY_DROPS = "drops";
 
@@ -90,13 +95,13 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 
 
 	@Override
-	protected int[] getInputSlots() {
-		return new int[] { 19 };
+	public int[] getInputSlots() {
+		return new int[] { BONEMEAL_SLOT };
 	}
 
 
 	@Override
-	protected int[] getOutputSlots() {
+	public int[] getOutputSlots() {
 		return new int[] { 14, 15, 16, 23, 24, 25, 32, 33, 34 };
 	}
 
@@ -115,15 +120,12 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 	private void fertilize() {
 		int range = this.getRange();
 		Block fertilize = this.block.getRelative(random.nextInt(-range, range + 1), 0, random.nextInt(-range, range + 1));
-		if(fertilize.getBlockData() instanceof Ageable ageable) {
-			int age = ageable.getAge();
-			int max = ageable.getMaximumAge();
-			if(age < max) {
-				if(Supplier.supply(new ItemStack(Material.BONE_MEAL), 1, this.getItemInputs()) > 0) {
-					ageable.setAge(Math.min(age + random.nextInt(2, 5), max));
-					fertilize.setBlockData(ageable);
-					fertilize.getWorld().spawnParticle(Particle.HAPPY_VILLAGER, fertilize.getLocation(), random.nextInt(5, 13), 0.5D, 0.5D, 0.5D);
-				}
+		Inventory gui = this.getInventory();
+		ItemStack bonemeal = gui.getItem(BONEMEAL_SLOT);
+		if(!ItemUtils.isEmpty(bonemeal) && ItemUtils.isType(bonemeal, Material.BONE_MEAL)) {
+			if(fertilize.applyBoneMeal(CollectionUtils.randomElement(BlockUtils.cartesian))) {
+				MinecraftWorldHelper.addGrowthParticles(fertilize);
+				ItemUtils.increaseItem(bonemeal, -1);
 			}
 		}
 	}
@@ -140,12 +142,10 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 		if(harvester == null)
 			return 0;
 
-		List<ItemStack> drops = harvester.harvest(relative, this.getFortune());
-		drops.removeIf(ItemUtils::isEmpty);
-		if(drops.isEmpty())
+		Collection<ItemStack> drops = harvester.harvest(relative, this.getFortune());
+		if(drops == null)
 			return 0;
 
-		this.drops.clear();
 		this.drops.addAll(drops);
 
 		return 200;
@@ -164,13 +164,11 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 
 	@Override
 	protected boolean finishProcess() {
-		while(!this.storeOutputs(this.drops)) {
-			if(!this.tryPushItems()) {
+		while(!this.storeOutputs(this.drops))
+			if(!this.tryPushItems())
 				return false;
-			}
-		}
 
-		while(this.tryPushItems());
+		this.tryPushItems();
 
 		return true;
 	}
@@ -213,22 +211,55 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 
 	private static final Map<Material, BlockHarvester> harvesters = new HashMap<>();
 
+	private static void registerHarvester(Material type, BlockHarvester harvester) {
+		harvesters.put(type, harvester);
+	}
+
+
+	private static void registerHarvester(Tag<Material> types, BlockHarvester harvester) {
+		types.getValues().forEach(type -> registerHarvester(type, harvester));
+	}
+
 	static {
-		harvesters.put(Material.WHEAT, BlockHarvester.CROP_HARVESTER);
-		harvesters.put(Material.POTATOES, BlockHarvester.CROP_HARVESTER);
-		harvesters.put(Material.CARROTS, BlockHarvester.CROP_HARVESTER);
-		harvesters.put(Material.BEETROOTS, BlockHarvester.CROP_HARVESTER);
-		harvesters.put(Material.NETHER_WART, BlockHarvester.CROP_HARVESTER);
-		harvesters.put(Material.SUGAR_CANE, BlockHarvester.SUGAR_CANE_HARVESTER);
-		harvesters.put(Material.CACTUS, BlockHarvester.SUGAR_CANE_HARVESTER);
-		harvesters.put(Material.BAMBOO, BlockHarvester.SUGAR_CANE_HARVESTER);
-		harvesters.put(Material.KELP, BlockHarvester.SUGAR_CANE_HARVESTER);
-		harvesters.put(Material.PUMPKIN, BlockHarvester.PUMPKIN_HARVESTER);
-		harvesters.put(Material.MELON, BlockHarvester.PUMPKIN_HARVESTER);
-		harvesters.put(Material.SWEET_BERRY_BUSH, BlockHarvester.SWEET_BERRY_HARVESTER);
-		harvesters.put(Material.COCOA, BlockHarvester.COCOA_HARVESTER);
-		harvesters.put(Material.CAVE_VINES, BlockHarvester.GLOW_BERRIES_HARVESTER);
-		harvesters.put(Material.CAVE_VINES_PLANT, BlockHarvester.GLOW_BERRIES_HARVESTER);
+		registerHarvester(Material.WHEAT, BlockHarvester.CROP_HARVESTER);
+		registerHarvester(Material.POTATOES, BlockHarvester.CROP_HARVESTER);
+		registerHarvester(Material.CARROTS, BlockHarvester.CROP_HARVESTER);
+		registerHarvester(Material.BEETROOTS, BlockHarvester.CROP_HARVESTER);
+		registerHarvester(Material.NETHER_WART, BlockHarvester.CROP_HARVESTER);
+		registerHarvester(Material.SUGAR_CANE, BlockHarvester.SUGAR_CANE_HARVESTER);
+		registerHarvester(Material.CACTUS, BlockHarvester.SUGAR_CANE_HARVESTER);
+		registerHarvester(Material.CACTUS_FLOWER, BlockHarvester.SIMPLE_BLOCK_HARVESTER);
+		registerHarvester(Material.BAMBOO, BlockHarvester.SUGAR_CANE_HARVESTER);
+		registerHarvester(Material.KELP, BlockHarvester.SUGAR_CANE_HARVESTER);
+		registerHarvester(Material.PUMPKIN, BlockHarvester.SIMPLE_BLOCK_HARVESTER);
+		registerHarvester(Material.MELON, BlockHarvester.SIMPLE_BLOCK_HARVESTER);
+		registerHarvester(Material.SWEET_BERRY_BUSH, BlockHarvester.SWEET_BERRY_HARVESTER);
+		registerHarvester(Material.COCOA, BlockHarvester.COCOA_HARVESTER);
+		registerHarvester(Material.CAVE_VINES, BlockHarvester.GLOW_BERRIES_HARVESTER);
+		registerHarvester(Material.CAVE_VINES_PLANT, BlockHarvester.GLOW_BERRIES_HARVESTER);
+		registerHarvester(Material.CHORUS_PLANT, BlockHarvester.CHORUS_HARVESTER);
+		registerHarvester(Material.CHORUS_FLOWER, BlockHarvester.CHORUS_HARVESTER);
+		registerHarvester(Tag.SMALL_FLOWERS, BlockHarvester.SIMPLE_BLOCK_HARVESTER);
+	}
+
+	private static Collection<ItemStack> getDrops(Block block, Material tool, int fortune) {
+		return block.getDrops(tool == null ? null : new ItemBuilder(tool).addEnchantment(Enchantment.FORTUNE, fortune).build());
+	}
+
+
+	private static List<ItemStack> removeSeed(Collection<ItemStack> drops, Predicate<Material> isSeed) {
+		List<ItemStack> list = new ArrayList<>();
+		Iterator<ItemStack> iterator = drops.iterator();
+		while(iterator.hasNext()) {
+			ItemStack drop = iterator.next();
+			list.add(drop);
+			if(isSeed.test(drop.getType())) {
+				ItemUtils.increaseItem(drop, -1);
+				iterator.forEachRemaining(list::add);
+				return list;
+			}
+		}
+		return null;
 	}
 
 	@FunctionalInterface
@@ -236,131 +267,184 @@ public class Farmer extends AbstractItemProcessingMachine<Farmer, FarmerBlock> {
 
 		Set<Material> seeds = Set.of(Material.WHEAT_SEEDS, Material.POTATO, Material.CARROT, Material.BEETROOT_SEEDS, Material.NETHER_WART);
 
+		BlockHarvester SIMPLE_BLOCK_HARVESTER = (Block block, int fortune) -> {
+			Material type = block.getType();
+			block.setType(Material.AIR);
+			return List.of(new ItemStack(type, 1 + random.nextInt(1 + fortune)));
+		};
 		BlockHarvester CROP_HARVESTER = (Block block, int fortune) -> {
 			BlockData data = block.getBlockData();
 			if(!(data instanceof Ageable crop))
-				return Collections.emptyList();
+				return null;
 
 			if(crop.getAge() < crop.getMaximumAge())
-				return Collections.emptyList();
+				return null;
 
-			ItemStack tool = new ItemBuilder(Material.DIAMOND_HOE).addEnchantment(Enchantment.FORTUNE, fortune).build();
-			Collection<ItemStack> drops = block.getDrops(tool);
+			Collection<ItemStack> drops = getDrops(block, Material.DIAMOND_HOE, fortune);
 			List<ItemStack> list = removeSeed(drops, seeds::contains);
 			if(list == null) {
 				block.setType(Material.AIR);
 				return new ArrayList<>(drops);
 			} else {
 				crop.setAge(0);
-				block.setBlockData(data);
+				block.setBlockData(crop);
 				return list;
 			}
 		};
 		BlockHarvester SUGAR_CANE_HARVESTER = (Block block, int fortune) -> {
-			int y = block.getY();
-			int i;
-
 			Material type = block.getType();
-			Block top;
-			for(i = 1; i < block.getWorld().getMaxHeight() - y; i++) {
-				top = block.getRelative(0, i, 0);
-				if(top.getType() == type) {
-					top.setType(top.getBlockData() instanceof Waterlogged water && water.isWaterlogged() ? Material.WATER : Material.AIR);
-				} else {
-					break;
-				}
+			int amount = 0;
+			Block b;
+			for(b = block.getRelative(BlockFace.UP); b.getType() == type; b = b.getRelative(BlockFace.UP)) {
+				b.setType(Material.AIR);
+				++amount;
+			}
+			boolean cactusFlower = false;
+			if(b.getType() == Material.CACTUS_FLOWER) {
+				cactusFlower = true;
+				b.setType(Material.AIR);
 			}
 
-			if(block.getRelative(0, -1, 0).getType() == type) {
+			if(block.getRelative(BlockFace.DOWN).getType() == type) {
 				block.setType(Material.AIR);
-			} else {
-				i--;
+				++amount;
 			}
 
-			i = i + random.nextInt(1 + i * fortune);
+			if(amount <= 0)
+				return null;
 
-			List<ItemStack> drops = new ArrayList<>();
-			int max = type.getMaxStackSize();
-			while(i >= max) {
-				drops.add(new ItemStack(type, max));
-				i -= max;
-			}
-			drops.add(new ItemStack(type, i));
+			amount += (int) Math.round(random.nextDouble() * amount * fortune);
+
+			List<ItemStack> drops = ItemUtils.getManyItems(new ItemStack(type), amount);
+			if(cactusFlower)
+				drops.add(new ItemStack(Material.CACTUS_FLOWER));
 			return drops;
 
-		};
-		BlockHarvester PUMPKIN_HARVESTER = (Block block, int fortune) -> {
-			List<ItemStack> drops = new ArrayList<>(block.getDrops(new ItemBuilder(Material.DIAMOND_HOE).addEnchantment(Enchantment.FORTUNE, fortune).build()));
-			block.setType(Material.AIR);
-			return drops;
 		};
 		BlockHarvester COCOA_HARVESTER = (Block block, int fortune) -> {
 			BlockData data = block.getBlockData();
 			if(!(data instanceof Ageable ageable))
-				return new ArrayList<>();
+				return null;
 
 			if(ageable.getAge() < ageable.getMaximumAge())
-				return new ArrayList<>();
+				return null;
 
 			ageable.setAge(0);
-			block.setBlockData(data);
-			int beans = 2 + fortune + random.nextInt(1 + fortune);
-			return Arrays.asList(new ItemStack(Material.COCOA_BEANS, beans));
+			block.setBlockData(ageable);
+
+			int beans = 3 + random.nextInt(1 + fortune);
+			return List.of(new ItemStack(Material.COCOA_BEANS, beans));
 		};
 		BlockHarvester SWEET_BERRY_HARVESTER = (Block block, int fortune) -> {
 			BlockData data = block.getBlockData();
 			if(!(data instanceof Ageable ageable))
-				return new ArrayList<>();
+				return null;
 
-			int age = ageable.getAge();
-			if(age < 2)
-				return new ArrayList<>();
+			if(ageable.getAge() < ageable.getMaximumAge())
+				return null;
 
 			ageable.setAge(1);
-			block.setBlockData(data);
+			block.setBlockData(ageable);
 
-			int berries = age - 1;
-			if(random.nextBoolean())
-				berries++;
-
-			berries += fortune + random.nextInt(1 + fortune);
-			return Arrays.asList(new ItemStack(Material.SWEET_BERRIES, berries));
+			int berries = random.nextInt(2, 5) + random.nextInt(1 + fortune);
+			return List.of(new ItemStack(Material.SWEET_BERRIES, berries));
 		};
 		BlockHarvester GLOW_BERRIES_HARVESTER = (Block block, int fortune) -> {
-			BlockData data = block.getBlockData();
-			if(!(data instanceof CaveVinesPlant vines))
-				return new ArrayList<>();
+			int vines = 0;
+			int berries = 0;
+			for(Block b = block.getRelative(BlockFace.DOWN); b.getBlockData() instanceof CaveVinesPlant plant; b = b.getRelative(BlockFace.DOWN)) {
+				if(plant.isBerries())
+					berries += 1 + random.nextInt(1 + fortune);
 
-			if(!vines.isBerries())
-				return new ArrayList<>();
+				b.setType(Material.AIR);
+				++vines;
+			}
 
-			vines.setBerries(false);
-			block.setBlockData(data);
-			int berries = 1 + random.nextInt(1 + fortune);
-			return Arrays.asList(new ItemStack(Material.GLOW_BERRIES, berries));
+			if(block.getBlockData() instanceof CaveVinesPlant plant && plant.isBerries()) {
+				berries += 1 + random.nextInt(1 + fortune);
+				plant.setBerries(false);
+				block.setBlockData(plant);
+			}
+
+			if(block.getRelative(BlockFace.UP).getType() == Material.CAVE_VINES_PLANT) {
+				block.setType(Material.AIR);
+				++vines;
+			}
+
+			if(vines <= 0 && berries <= 0)
+				return null;
+
+			return ItemUtils.getManyItems(new ItemStack(Material.GLOW_BERRIES), berries);
 		};
+		BlockHarvester CHORUS_HARVESTER = new BlockHarvester() {
 
-		// TODO: BlockHarvester CHORUS_HARVESTER = (Block block, int fortune) -> { return null; };
+			private static final BlockFace[] directions = { BlockFace.UP, BlockFace.NORTH, BlockFace.SOUTH, BlockFace.EAST, BlockFace.WEST };
+
+			private boolean breakChorusBreadthFirst(Block block, Set<Block> visited, int[] chorus) {
+				boolean destroy = true;
+				for(BlockFace direction : directions) {
+					Block next = block.getRelative(direction);
+					if(visited.add(next)) {
+						if(next.getType() == Material.CHORUS_PLANT) {
+							if(!this.breakChorusBreadthFirst(next, visited, chorus))
+								destroy = false;
+						} else if(next.getType() == Material.CHORUS_FLOWER) {
+							if(next.getBlockData() instanceof Ageable flower && flower.getAge() < flower.getMaximumAge()) {
+								destroy = false;
+							} else {
+								++chorus[1];
+								next.setType(Material.AIR);
+							}
+						}
+					}
+				}
+
+				if(!destroy)
+					return false;
+
+				block.setType(Material.AIR);
+				++chorus[0];
+
+				return true;
+			}
+
+
+			@Override
+			public Collection<ItemStack> harvest(Block block, int fortune) {
+				if(block.getType() == Material.CHORUS_FLOWER) {
+					if(block.getBlockData() instanceof Ageable flower && flower.getAge() == flower.getMaximumAge()) {
+						flower.setAge(0);
+						block.setBlockData(flower);
+						return Collections.emptyList();
+					}
+					return null;
+				}
+
+				if(block.getType() != Material.CHORUS_PLANT)
+					return null;
+
+				int[] chorus = { 0, 0 };
+				if(this.breakChorusBreadthFirst(block, new HashSet<>(List.of(block)), chorus)) {
+					if(chorus[1] > 0 && block.getRelative(BlockFace.DOWN).getType() == Material.END_STONE) {
+						--chorus[1];
+						block.setType(Material.CHORUS_FLOWER);
+					}
+				}
+
+				if(chorus[0] <= 0 && chorus[1] <= 0)
+					return null;
+
+				int chorusFruits = (int) Math.round(random.nextDouble() * 0.5D * (1.0D + fortune) * chorus[0]);
+				List<ItemStack> drops = ItemUtils.getManyItems(new ItemStack(Material.CHORUS_FRUIT), chorusFruits);
+				drops.addAll(ItemUtils.getManyItems(new ItemStack(Material.CHORUS_FLOWER), chorus[1]));
+				return drops;
+			}
+
+		};
 
 		// TODO: BlockHarvester TREE_HARVESTER = (Block block, int fortune) -> { return null; };
 
-		List<ItemStack> harvest(Block block, int fortune);
-
-
-		static List<ItemStack> removeSeed(Collection<ItemStack> drops, Predicate<Material> isSeed) {
-			List<ItemStack> list = new ArrayList<>();
-			Iterator<ItemStack> iterator = drops.iterator();
-			while(iterator.hasNext()) {
-				ItemStack drop = iterator.next();
-				list.add(drop);
-				if(isSeed.test(drop.getType())) {
-					ItemUtils.increaseItem(drop, -1);
-					iterator.forEachRemaining(list::add);
-					return list;
-				}
-			}
-			return null;
-		}
+		Collection<ItemStack> harvest(Block block, int fortune);
 
 	}
 
